# vdi-client-linux

./: .gitignore  README.md  qt-qml-rdp-client-goal.md  安装教程.md
freerdp-3.28.0/: CMakeLists.txt
freerdp-3.28.0/channels/rdpecam/client/: camera_device_main.c
freerdp-3.28.0/channels/rdpecam/client/v4l/: camera_v4l.c
freerdp-3.28.0/channels/rdpgfx/client/: rdpgfx_codec.c
freerdp-3.28.0/libfreerdp/codec/: h264.c  h264_ffmpeg.c
qfreerdp-master/: CMakeLists.txt  README.md  clipboard-entry.h  main.qml  mini-qf-client.cc  qf_channel_client_handler.c  qf_log.h  qf_util.h  rdp-view-item.h  usb-manager.cc  usb-manager.h
qfreerdp-master/rdpsnd-src/: rdpsnd_main.c
qfreerdp-master/rdpsnd-src/pulse/: rdpsnd_pulse.c
qfreerdp-master/ref-tmp/: addin.h  cliprdr_common.c  cliprdr_common.h  cliprdr_format.c  cliprdr_format.h  cliprdr_main.c  cliprdr_main.h
vdi-client-linux/: CMakeLists.txt  VDIClient_1.5.0_amd64.deb
vdi-client-linux/src/: loginwindow.cpp  loginwindow.h  main.cpp
vdi-client-linux/tools/: build-deb.sh
